# tpbhs

./: Config.hs  FSUtils.hs  LICENSE  Main.hs  README.md  TVShow.hs  Torrent.hs  TpbHs.cabal  TpbHs.config  TpbHs.hs  TpbParser.hs  UTorrentUtils.hs  build.bat  tbphs.cabal  tpbhs.config
