Name:                TpbHs
Version:             0.0.1
Description:         thepiratebay.se TVShow downloader
License:             MIT
License-file:        LICENSE
Author:              Vitaly Turinsky
Maintainer:          vitaly.turinsky@gmail.com
Copyright:           Vitaly Turinsky
Build-type:          Simple
Cabal-version:       >=1.10

Executable tpbhs
  Main-is:           Main.hs
  Other-extensions:  GeneralizedNewtypeDeriving
  Build-depends:     base >= 4.6,
                     process >= 1.1,
                     tagsoup >= 0.13,
                     HTTP >= 4000.2,
                     ConfigFile >= 1.1,
                     mtl >= 2.1,
                     regex-posix >= 0.95,
                     directory >= 1.2,
                     filepath >= 1.3,
                     bytestring >= 0.10,
                     network >= 2.4,
                     zlib >= 0.5
  Default-language:  Haskell2010
  Ghc-options:       -Wall -threaded

